--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -12,7 +12,7 @@ div {
 }
 
 .list {
-  padding-left: 20px;
+  padding: 0 20px;
   text-align: left;
   border-bottom: 1px solid gray;
 }
@@ -22,6 +22,10 @@ div {
   padding: 20px;
   background-color: #eee;
   text-align: left;
+}
+
+.likeBtn {
+  font-size: 14px;
 }
 
 .footer {
